--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
+    "strictPropertyInitialization": false,
+    "strictNullChecks": false,
     "skipLibCheck": true,
     "isolatedModules": true,
     "esModuleInterop": true,
